	* Fixed bug that prevented --sync from working properly
	  Package repo database wasn't being found. (moved in pacman 3.1.0)
	* Disabled --vote and --unvote again
	* Moved a bunch of functions out of the main script
 	* Fix bug that makes builddeps fail if the package has been previously
	  built by aurbuild
	* Got rid of annoying pkgname.pid dirs in /var/tmp/aurbuild/build
	* Remove makepkgv2 support
	* Remove all uses of versionpkg. (makepkg has assimilated its function)
	* --revision removed. It's made obsolete by makepkg

 -v1.8.1 (February 29, 2008)
	* Fixed a lot of stuff in README and the man page
	* Restored --auto-build and --upgrade
	* --upgrade output shows versions and alerts to non-AUR foreign
	  packages.

 -v1.8.0 (February 21, 2008)
	* Updates to make aurbuild compatible with AUR 1.5.0
	* Cleaned up directory structure
	* Tweaked setup script, and some other files (more to come)
	* Added aurbuild's own PKGBUILD to misc/
	* Removed safe flagging notices and checks.
	  (Removed from AUR web interface)
	* Temporarily removed --vote --unvote --upgrade and --auto-build

 -v1.7.8 (March 29, 2007)
	* USE_FAKEROOT fix due to makepkg v3
	* USE_COLOR fix due to makepkg v3
	* lost PKGDEST due to makepkg v3

 -v1.7.7 (March 24, 2007)
	* Fixed lost permissions in AUR tarball.

 -v1.7.6 (March 3, 2007)
	* Fixed failed C compliler checks during .configure due to an
	  unwritable HOME location for ccache. HOME will be passed as
	  /var/tmp/aurbuild and thus ccache data will reside in
	  /var/tmp/aurbuild/.ccache for aurbuilds.

 -v1.7.5 (February 26, 2007)
	* Fixed broken Maintainer field in --search due to AUR upgrade.
	* Spelling corrections in manual page.

 -v1.7.4 (February 10, 2007)
 	* Fixed permission errors while extracting the AUR tarball.
	* Corrected message about needing write AND EXECUTE permissions on the
	  $PKGDEST in main script and man page.
	* Added -f, --official to build official packages found in /var/abs/.