@@ -1,6 +1,11 @@
 
+Python debugger:
+      import pdb
+      pdb.set_trace()
+
 BUGS
 ----
 
  * Crashes if PKGBUILD has custom variables that don't begin with an underscore
+
 
