@@ -18,6 +18,9 @@ To Do List:
  * Make sure root user is used for as few operations as possible
    Currently some directories in /var/tmp/aurbuild are owned by root
 
+ * Make sure user_makedirs and user_copytree switch user effectively
+   (Get rid of global variables)
+
 In Progress:
  * Move functions out of main script and into appropriate modules
 
