@@ -9,9 +9,12 @@ AURBUILD
  	* Fix bug that makes builddeps fail if the package has been previously
 	  built by aurbuild
 	* Got rid of annoying pkgname.pid dirs in /var/tmp/aurbuild/build
+	  Now it's just /var/tmp/aurbuild/build/pkgname and it gets
+	  overwritten if you try to build via aurbuild again. 
 	* Remove makepkgv2 support
 	* Remove all uses of versionpkg. (makepkg has assimilated its function)
 	* --revision removed. It's made obsolete by makepkg
+	* Added BUGS file to help keep track of bugs
 
  -v1.8.1 (February 29, 2008)
 	* Fixed a lot of stuff in README and the man page
